--- a/12th.html
+++ b/12th.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body class="min-h-screen justify-center items-center flex">
-<div class="grid grid-cols-4 justify-center items-center gap-8">
+<div class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 justify-center items-center gap-8">
     <div><button class="btn btn-wide btn-lg hover:scale-105" id="1"  onclick="getno(this.id)">श्लोक-१ </button></div>
     <div><button class="btn btn-wide btn-lg hover:scale-105" id="2"  onclick="getno(this.id)">श्लोक-२ </button></div>
     <div><button class="btn btn-wide btn-lg hover:scale-105" id="3"  onclick="getno(this.id)">श्लोक-३ </button></div>
