--- a/audio.html
+++ b/audio.html
@@ -9,9 +9,12 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body class="min-h-screen">
-    <div class="justify-center items-center flex space-x-5">
+    <div class="justify-center items-center flex space-x-5 h-[90vh]">
         <audio src="" id="audio" controls autoplay></audio>
     </div>
+    <footer class="justify-center flex">
+        <a class="btn btn-wide btn hover:scale-105" href="index.html"> Go to home </a>
+    </footer>
 </body>
 <script src="audio.js"></script>
 </html>
