--- a/15th.html
+++ b/15th.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="min-h-screen justify-center items-center flex">
+<body class="min-h-screen lg:grid-cols-4 md:grid-cols-2 grid-cols-1 justify-center items-center flex">
 <div class="grid grid-cols-4 justify-center items-center gap-8">
     <div><button class="btn btn-wide btn-lg hover:scale-105" id="21"  onclick="getno(this.id)">श्लोक-१ </button></div>
     <div><button class="btn btn-wide btn-lg hover:scale-105" id="22"  onclick="getno(this.id)">श्लोक-२ </button></div>
