--- a/12th.html
+++ b/12th.html
@@ -10,26 +10,26 @@
 </head>
 <body class="min-h-screen justify-center items-center flex">
 <div class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 justify-center items-center gap-8">
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="1"  onclick="getno(this.id)">श्लोक-१ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="2"  onclick="getno(this.id)">श्लोक-२ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="3"  onclick="getno(this.id)">श्लोक-३ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="4"  onclick="getno(this.id)">श्लोक-४ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="5"  onclick="getno(this.id)">श्लोक-५ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="6"  onclick="getno(this.id)">श्लोक-६ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="7"  onclick="getno(this.id)">श्लोक-७ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="8"  onclick="getno(this.id)">श्लोक-८ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="9"  onclick="getno(this.id)">श्लोक-९ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="10" onclick="getno(this.id)">श्लोक-१० </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="11" onclick="getno(this.id)">श्लोक-११ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="12" onclick="getno(this.id)">श्लोक-१२ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="13" onclick="getno(this.id)">श्लोक-१३ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="14" onclick="getno(this.id)">श्लोक-१४ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="15" onclick="getno(this.id)">श्लोक-१५ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="16" onclick="getno(this.id)">श्लोक-१६ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="17" onclick="getno(this.id)">श्लोक-१७ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="18" onclick="getno(this.id)">श्लोक-१८ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="19" onclick="getno(this.id)">श्लोक-१९ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="20" onclick="getno(this.id)">श्लोक-२० </button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="1"  onclick="getno(this.id)">श्लोक-१ (आर्ण आचार्य) </button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="2"  onclick="getno(this.id)">श्लोक-२ (खुश बैंकर)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="3"  onclick="getno(this.id)">श्लोक-३ (आरव भट्ट)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="4"  onclick="getno(this.id)">श्लोक-४ (मानव भट्ट)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="5"  onclick="getno(this.id)">श्लोक-५ (श्रीनील चौहान)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="6"  onclick="getno(this.id)">श्लोक-६ (शिवांश दागा)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="7"  onclick="getno(this.id)">श्लोक-७ (सान्वि गुप्ता)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="8"  onclick="getno(this.id)">श्लोक-८ (हृदय जागीरदार)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="9"  onclick="getno(this.id)">श्लोक-९ (गौराङ्ग जैन)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="10" onclick="getno(this.id)">श्लोक-१० (आलोक जानि)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="11" onclick="getno(this.id)">श्लोक-११ (दिर्घ जोशी)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="12" onclick="getno(this.id)">श्लोक-१२ (निनाद जोशी)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="13" onclick="getno(this.id)">श्लोक-१३ (यश्वी जोशी)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="14" onclick="getno(this.id)">श्लोक-१४ (आयुषी कपाडिया)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="15" onclick="getno(this.id)">श्लोक-१५ (अर्पिता खटायै)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="16" onclick="getno(this.id)">श्लोक-१६ (ध्याना मेहता)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="17" onclick="getno(this.id)">श्लोक-१७ (अर्णव मिस्त्री)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="18" onclick="getno(this.id)">श्लोक-१८ (कियारा परमार)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="19" onclick="getno(this.id)">श्लोक-१९ (अयान पटेल)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="20" onclick="getno(this.id)">श्लोक-२० (लव्यांश पटेल)</button></div>
 
 
 </div>
