--- a/15th.html
+++ b/15th.html
@@ -10,26 +10,26 @@
 </head>
 <body class="min-h-screen lg:grid-cols-4 md:grid-cols-2 grid-cols-1 justify-center items-center flex">
 <div class="grid grid-cols-4 justify-center items-center gap-8">
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="21"  onclick="getno(this.id)">श्लोक-१ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="22"  onclick="getno(this.id)">श्लोक-२ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="23"  onclick="getno(this.id)">श्लोक-३ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="24"  onclick="getno(this.id)">श्लोक-४ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="25"  onclick="getno(this.id)">श्लोक-५ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="26"  onclick="getno(this.id)">श्लोक-६ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="27"  onclick="getno(this.id)">श्लोक-७ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="28"  onclick="getno(this.id)">श्लोक-८ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="29"  onclick="getno(this.id)">श्लोक-९ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="30" onclick="getno(this.id)">श्लोक-१० </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="31" onclick="getno(this.id)">श्लोक-११ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="32" onclick="getno(this.id)">श्लोक-१२ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="33" onclick="getno(this.id)">श्लोक-१३ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="34" onclick="getno(this.id)">श्लोक-१४ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="35" onclick="getno(this.id)">श्लोक-१५ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="36" onclick="getno(this.id)">श्लोक-१६ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="37" onclick="getno(this.id)">श्लोक-१७ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="38" onclick="getno(this.id)">श्लोक-१८ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="39" onclick="getno(this.id)">श्लोक-१९ </button></div>
-    <div><button class="btn btn-wide btn-lg hover:scale-105" id="40" onclick="getno(this.id)">श्लोक-२० </button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="21"  onclick="getno(this.id)">श्लोक-१ (लव्यांश पटेल)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="22"  onclick="getno(this.id)">श्लोक-२ (श्रिति पटेल)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="23"  onclick="getno(this.id)">श्लोक-३ (द्विजा रावल)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="24"  onclick="getno(this.id)">श्लोक-४ (काव्य शाह)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="25"  onclick="getno(this.id)">श्लोक-५ (मनविक शाह)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="26"  onclick="getno(this.id)">श्लोक-६ (द्विति शाह)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="27"  onclick="getno(this.id)">श्लोक-७ (कपीश शाक्तावत)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="28"  onclick="getno(this.id)">श्लोक-८ (लावन्या सिंह)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="29"  onclick="getno(this.id)">श्लोक-९ (हर्ष सिन्हा)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="30" onclick="getno(this.id)">श्लोक-१० (जैनील सोनि)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="31" onclick="getno(this.id)">श्लोक-११ (र्हियान्ना सुजनैनी)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="32" onclick="getno(this.id)">श्लोक-१२ (आरोही विजय)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="33" onclick="getno(this.id)">श्लोक-१३ (हिर्दिक शेखावत)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="34" onclick="getno(this.id)">श्लोक-१४ (दीपित मिश्रा)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="35" onclick="getno(this.id)">श्लोक-१५ (वैदिक जयसवाल)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="36" onclick="getno(this.id)">श्लोक-१६ (सान्वी दुआ)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="37" onclick="getno(this.id)">श्लोक-१७ (झिल मेहता)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="38" onclick="getno(this.id)">श्लोक-१८ (आरव ओडेद्रा)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="39" onclick="getno(this.id)">श्लोक-१९ (गुञ्ज पटोडी)</button></div>
+    <div><button class="btn btn-wide btn-lg hover:scale-105" id="40" onclick="getno(this.id)">श्लोक-२० (नमन कर्वा)</button></div>
 
 
 </div>
