--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="dark min-h-screen justify-center items-center flex flex-col md:flex-row space-x-5">
+<body class="dark min-h-screen justify-center items-center flex flex-col md:flex-row gap-5">
     <a class="btn btn-wide btn-lg hover:scale-105" href="12th.html"> १२वां अध्याय </a>
     <a class="btn btn-wide btn-lg hover:scale-105" href="15th.html"> १५वां अध्याय </a>
 
