--- a/audio.html
+++ b/audio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html >
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="luxury">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 </head>
 <body class="min-h-screen">
     <div class="justify-center items-center flex space-x-5 h-[90vh]">
-        <audio src="" id="audio" controls autoplay></audio>
+        <audio src="" id="audio" controls controlsList="nodownload noplaybackrate" autoplay></audio>
     </div>
     <footer class="justify-center flex">
         <a class="btn btn-wide btn hover:scale-105" href="index.html"> Go to home </a>
